k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flask-apps
  labels:
    name: flask-apps
